--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/index.js"
+  },
   "dependencies": {
     "commitizen": "^4.3.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
