--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "commitizen": "^4.3.0",
     "express": "^4.18.2",
-    "uuidv4": "^6.2.13"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
