--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "commitizen": "^4.3.0",
     "express": "^4.18.2",
-    "pg": "^8.11.0",
-    "uuid": "^9.0.0"
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
